--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
